// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render form is closed 1`] = `
<div
  className="feedback-container"
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={false}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={500}
    unmountOnExit={false}
  >
    <Component />
  </Transition>
  <Modal
    centered={true}
    className="feedback-modal-container"
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer={true}
    eventPool="Modal"
    open={false}
    size="small"
  >
    <Header
      content="Get Involved with Search NEU!"
      icon="mail"
    />
    <ModalContent
      className="formModalContent"
    >
      <Form
        as="form"
      >
        <div
          className="feedbackParagraph"
        >
          Thanks for your interest! We'd love to have more people help out with the project. We are looking for people for both introductory level roles and leadership roles. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook URL, email, Fortnite username, etc) and someone will reach out!
        </div>
        <TextArea
          as="textarea"
          className="feedbackTextbox"
          form="feedbackForm"
          name="response"
          onChange={[Function]}
          rows={3}
        />
      </Form>
    </ModalContent>
    <ModalActions>
      <Button
        as="button"
        basic={true}
        color="red"
      >
        <Icon
          as="i"
          name="remove"
        />
        Cancel
      </Button>
      <Button
        as="button"
        color="green"
        form="feedbackForm"
        onClick={[Function]}
        type="submit"
      >
        <Icon
          as="i"
          name="checkmark"
        />
        Submit
      </Button>
    </ModalActions>
  </Modal>
</div>
`;

exports[`should render the form 1`] = `
<div
  className="feedback-container"
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={false}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={500}
    unmountOnExit={false}
  >
    <Component />
  </Transition>
  <Modal
    centered={true}
    className="feedback-modal-container"
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer={true}
    eventPool="Modal"
    open={true}
    size="small"
  >
    <Header
      content="Get Involved with Search NEU!"
      icon="mail"
    />
    <ModalContent
      className="formModalContent"
    >
      <Form
        as="form"
      >
        <div
          className="feedbackParagraph"
        >
          Thanks for your interest! We'd love to have more people help out with the project. We are looking for people for both introductory level roles and leadership roles. There's a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don't have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook URL, email, Fortnite username, etc) and someone will reach out!
        </div>
        <TextArea
          as="textarea"
          className="feedbackTextbox"
          form="feedbackForm"
          name="response"
          onChange={[Function]}
          rows={3}
        />
      </Form>
    </ModalContent>
    <ModalActions>
      <Button
        as="button"
        basic={true}
        color="red"
      >
        <Icon
          as="i"
          name="remove"
        />
        Cancel
      </Button>
      <Button
        as="button"
        color="green"
        form="feedbackForm"
        onClick={[Function]}
        type="submit"
      >
        <Icon
          as="i"
          name="checkmark"
        />
        Submit
      </Button>
    </ModalActions>
  </Modal>
</div>
`;
